feat: 批量文档摄入支持，加入 CTLS / Rotax-912 / FAA-AC-43 资料
- 背景：另一个智能体找来了 CTLS-MM-rev8、Rotax-912-Line-Maintenance、
  FAA-AC-43-13-1B 三份公开手册。需要批量摄入到 ChromaDB，扩充向量库内容。
- 改造 DocumentIngestionController：从硬编码单文件改为遍历 data/ 目录下所有 PDF，
  支持一次性批量摄入。
- 改造 DocumentIngestionService：新增 ingestDocumentSafe() 方法，捕获单文件解析异常，
  避免一个 PDF 失败导致整个批次中断。
- 坑与解决：WT9-AMM.pdf 解析时 PDFBox 报 'Missing descendant font dictionary' 错误，
  属于 PDF 本身字体字典不标准，无法通过 Tika/Apache PDFBox 解析。
  解决：安全跳过该文件，记录失败，继续处理其他文件。
- 验证：摄入后测试 CTLS Rotax 912 滑油更换问题，返回完整 7 步程序 + 具体章节引用
  （12-20-00, Pages 42, 49-50），证明向量库已能支撑具体维护程序问答。

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>